--- a/config
+++ b/config
@@ -17,6 +17,7 @@ order += "battery all"
 order += "disk /"
 order += "load"
 order += "memory"
+order += "volume master"
 order += "tztime local"
 
 wireless _first_ {
@@ -49,4 +50,12 @@ memory {
 
 tztime local {
         format = "%H:%M %d/%m/%Y"
+}
+
+volume master {
+   format = " %volume"
+   format_muted = " %volume"
+   device = "default"
+   mixer = "Master"
+   mixer_idx = 0
 }
