--- a/config
+++ b/config
@@ -9,6 +9,9 @@
 general {
         colors = true
         interval = 5
+        color_good = "#50FA7B"
+        color_degraded = "#F1FA8C"
+        color_bad = "#FF5555"
 }
 
 order += "wireless _first_"
